--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,38 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/Entropia/model/备份
+/Entropia/model
+/Entropia/checkpoint
+/Entropia/演示.png
+/Entropia/VDSR.py
+/Entropia/test_jpg.py
+/Entropia/test2.py
+/Entropia/test1.py
+/Entropia/test0.py
+/Entropia/tanh.svg
+/Entropia/SRCNN.svg
+/Entropia/SRCNN.py
+/Entropia/Preprocessing.py
+/Entropia/MSRN.py
+/Entropia/lr3.png
+/Entropia/lr2.png
+/Entropia/lr2(b).png
+/Entropia/hr3.png
+/Entropia/hr2.png
+/Entropia/Entropia.svg
+/Entropia/Entropia.pyproj
+/Entropia/Entropia.ico
+/Entropia/Entropia.7z
+/Entropia/DRN.py
+/Entropia/demo1.png
+/Entropia/demo0.png
+/Entropia/demo0.jpg
+/Entropia/data_visual.py
+/Entropia/continue_mk2.py
+/Entropia/continue.py
+/Entropia/b.png
+/Entropia/3.jpg
+/Entropia/0562.png
+/Entropia/0214.png
+/Entropia/0038.png
